lab1/Test/L1-A-13-66.output
Error Type B at Line 11
Error Type B at Line 15
Error Type B at Line 21
Error Type A at Line 28
Error Type A at Line 31
Error Type B at Line 32
